# E_PTD_PS

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  before_install.sh  build.sh  codecov.sh  codecov.yml  install_gtest.sh
include/: fhn_model.h  tau_matrix.h  time_delay_matrix.h  ws_network.h
python/: Q_D.py  Q_D_ISI.py  Q_D_Tau.py  Q_D_gauss.py  Q_D_gauss_P.py  Q_N_gauss.py  Q_Tau.py  Q_Tau_D.py  Q_Tau_P.py  Q_U.py  config.py  ctrl.py  plot.py
python/tools/: ctrl.py  pulse.py  solve.py
src/: solve.cpp
test/: CMakeLists.txt  test_fhn_model.cpp  test_tau_matrix.cpp  test_time_delay_matrix.cpp  test_ws_network.cpp
